* Multi-select 'gd-comma-list' class dropping last element to new line - FIXED
* Tooltips not rendering HTML - FIXED
* [gd_post_images] option added to show images for specific post - ADDED
* AUI: unable to save empty value for multiselect/multicheckbox fields - FIXED
* Category image not added in Yoast SEO meta - FIXED
* Sometime ninja form dodn't send notification to listing email - FIXED

= 2.1.0.15 =
* OpenStreetMap popup not working with AUI - FIXED
* Multi-select list out broken if not using 'gd-comma-list' class - FIXED

= 2.1.0.14 =
* Overwrite by Rank Math don't renders GD variables - FIXED
* v1 to v2 upgrade shows missing Events plugin - FIXED
* Post meta output `gd-comma-list` not working with bootstrap styles - FIXED
* Video screenshot linking to video lightbox does not work on single image output - FIXED
* Required field text not showing for checkbox - FIXED
* Import GD elementor templates not working - FIXED
* Brivona theme & Zeen theme Tipi Builder compatibility - FIXED
* Rating not updated when SG optimizer cache is active - FIXED
* Add listing child categories checkbox not showing left padding on frontend - FIXED
* Make new field by default ticked active in field setting - CHANGED
* Show loading effect on map popup when click on marker - ADDED
* Value not saved for the field which contains integer as field name - FIXED
* Pagination looks messed in mobile devices - FIXED

= 2.1.0.13 =
* Small fix for the way some addresses are geocoded if "postal_town" is present - FIXED
* Borlabs Cookie plugin integration added for GD maps - ADDED
* Chrome prevents saving integer number for upload max size - FIXED

= 2.1.0.12 =
* GD > Categories option added to choose image size - ADDED
* Frontend delete listing don't prompt any response message with AUI - FIXED
* Option added GD > Loop Actions to hide layouts for frontend list view - ADDED
* Elementor Them Builder layout preview image missing for GD Elementor templates - FIXED