@@ -11,6 +11,7 @@
 * AUI: unable to save empty value for multiselect/multicheckbox fields - FIXED
 * Category image not added in Yoast SEO meta - FIXED
 * Sometime ninja form dodn't send notification to listing email - FIXED
+* Disable beta addons setting on upgrade - CHANGED
 
 = 2.1.0.15 =
 * OpenStreetMap popup not working with AUI - FIXED
